Change Hook Location, Code refactor!